Add support for double types
Base template driven system
Support for doubles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(bson)
 
+SET(CMAKE_CXX_FLAGS "-std=c++11 -g ${CMAKE_CXX_FLAGS}")
+
 add_executable(bson main.cpp)
 
 install(TARGETS bson RUNTIME DESTINATION bin)
