Improved Document Creation, Element handles char*
Documents can now be created with initialization lists of pairs (or
initialization lists of pairs.

Element has been modified to treat char* as a std::string correct
(earlier had problems when dealing with the shared_ptr and the char*)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ element.cpp
 
 add_library(fastbson SHARED ${bson_src})
 
-#add_executable(bson_runner main.cpp)
+add_executable(bson_runner main.cpp)
+target_link_libraries(bson_runner fastbson)
 
 add_subdirectory(tests)
