--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,6 @@ test_json.cpp
 add_executable(tests ${test_sources})
 target_link_libraries(tests fastbson gtest_main)
 
-add_custom_command(TARGET tests 
-                   POST_BUILD
-                   COMMAND ./tests)
+#add_custom_command(TARGET tests 
+#                   POST_BUILD
+#                   COMMAND ./tests)
