--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 #add gtest
+if (NOT TARGET gtest_main)
 add_subdirectory(gtest-1.7.0)
+endif()
+
 include_directories(${gtest_SOURCE_DIR}/include)
 
 #the actual source directory
