add a separate flag for build type building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 project(bson)
 cmake_minimum_required(VERSION 2.8)
-
+cmake_minimum_required(VERSION 2.8)
+option(CodeCoverage "CodeCoverage" OFF)
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wno-deprecated-register ${CMAKE_CXX_FLAGS}")
-set(CMAKE_CXX_FLAGS_DEBUG "-std=c++11 -Wno-deprecated-register -O0 --coverage ${CMAKE_CXX_FLAGS_DEBUG}")
+set(CMAKE_CXX_FLAGS_DEBUG "-std=c++11 -Wno-deprecated-register -O0 -g ${CMAKE_CXX_FLAGS_DEBUG}")
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules/)
 
 find_package(BISON 3 REQUIRED)
@@ -32,6 +33,10 @@ add_library(fastbson SHARED ${bson_src} ${BISON_jsonParser_OUTPUTS} ${FLEX_jsonL
 
 add_subdirectory(tests)
 
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+if (CodeCoverage MATCHES On)
 include(CodeCoverage)
 setup_target_for_coverage(${PROJECT_NAME}_coverage bsontests coverage)
 setup_target_for_coverage_cobertura(${PROJECT_NAME}_cobertura bsontests coverage --gtest_output=xml:coverage.junit.xml)
+endif()
+endif()
